css/styles.css
* {
    margin: 0;
    line-height: calc(1em + 0.5rem);
}
html {
    scroll-behavior: smooth;
}

.container {
    max-width: 1536px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.0rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

/* HEADER */

.hamburger {
    display: none;
    flex-direction: column;
    justify-content: space-between;
    width: 25px;
    height: 20px;
    cursor: pointer;
}
  
.hamburger span {
    display: block;
    height: 3px;
    background: #333;
    border-radius: 2px;
}

.logo {
    width: 30%;
}

.headerBar {
    display: flex;
    justify-content: space-between;
    height: 7rem;
}

.responsive-img {
    width: 100%;        
    height: 100%;       
    max-width: 600px;   
    display: block;    
}

.nav-header {
    display: flex;
    align-items: end;
    padding: 0.25rem;
}

.nav-links {
    display: flex;
    justify-content: flex-end; 
    gap: 1.5rem;
    list-style: none;
    text-decoration: none;
}

a {
    color: #111111;
    font-size: 1rem;
    text-decoration: none;
}

/* IMG SLIDER */

.slider {
    position: relative;
    width: 100%;
    height: 37.5rem;
    margin: auto;
    overflow: hidden;
}

.slider img {
    width: 100%;
    display: none;
}

img.displaySlide {
    display: block;
    animation-name: fade;
    animation-duration: 1.5s;
}

.content {
  display: flex;
  flex-direction: column;
  text-align: center;
  gap: 40px;
}

.intro {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

@keyframes fade {
    from {opacity: .5}
    to {opacity: 1}
}

/* STATIC IMAGE BANNER */

.static {
    position: relative;
    width: 100%;
    height: 37.5rem;
    margin: auto;
    overflow: hidden;
}

.static img {
  width: 100%;         
  height: 100%;
  object-fit: cover;   
  object-position: center middle; 
}

/* FOOTER */

hr.element-divider-separator {
  border-top: 0.125rem solid grey
}

.footer-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: auto;
  gap: 20px;
  font: 1.8rem;
}

.column-footer {
  display: flex;
  flex-direction: column;
  flex-shrink: 1 1;
  margin-top: 1rem;
  gap: 1rem;
}

.footer-list {
  list-style-type: none;
}

ul.footer-list {
  padding: 0;
  font-size: 0.8rem;
}

.column-footer p,li,a {
  font-size: 0.8rem;
}

.footer img {
  max-width: 380px;
}


.footer-bottom {
  width: 100vw;
  text-align: center;
  margin-top: 30px;
  font-size: 1rem;
  padding: 1.5rem;
  color: #f9f9f9;
  background-color: #111111;
}

/* FAQs */
.questions {
  display: flex;
  flex-direction: column;
  width: 60%;
  margin: auto;
  gap: 2.5rem;
}

h4 {
  text-align: start;
  width: 90%;
  font-weight: 400;
}

.answer {
  display: none;
  text-align: start;
  font-weight: 300;
}

.question {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  background-color: #fdf9f5;
  border-radius: 0.3rem;
}

.pair {
  box-shadow: -1px 1px 0.8rem 1px grey;
}

.answer, .question{
  padding: 1rem;
} 

.toggle-icon {
  font-size: 1.5rem;
  color: grey;
}

/* MEDIA QUERIES */

/* 2xl */
  @media (max-width: 1536px) {
    .container {
      max-width: 1280px;
    }

  }
  
/* xl */
  @media (max-width: 1280px) {
    .container {
      max-width: 1024px;
    }
  }
  
/* lg */
  @media (max-width: 1024px) {
    .container {
      max-width: 768px;
    }

    .logo {
      width: 80%;         
      height: auto;       
      display: flex;
      align-items: center;
    }
  
    .responsive-img {
      width: 100%;        
      height: auto;       
      max-width: none;    
    }

    .mobile-menu {
      display: flex;
      align-items: center;
    }
    
    .hamburger {
        display: flex;
      }
    
    #nav-menu {
      display: none;
      flex-direction: column;
      background-color: #f9f9f9;
      padding: 1rem;
    }
    
    #nav-menu.active {
      display: flex;
    }

    .nav-header {
      justify-content: baseline;
      align-items: baseline;
      width: 100%;
    }
    
    .nav-links {
      flex-direction: column;
      gap: 0;
      width: 100%;
      padding-left: 0;
    }
    
    .headerBar {
      display: flex;
      flex-wrap: wrap;
      height: auto;
    }

    ul.nav-links li{
      border: solid, grey, 0.125rem;
      border-left-width: 0;
      border-right-width: 0;
      border-bottom-width: 0;
      width: 100%;
    }

    .questions {
      width: 90%;
    }

  }
  
  /* md */
  @media (max-width: 768px) {
    .container {
      max-width: 640px;
    }
  }
  
  /* sm */
  @media (max-width: 640px) {
    .container {
      max-width: 475px;
    }
  }
  
  /* xs */
  @media (max-width: 475px) {
    .container {
      width: 100%;
    }
  }

  /* Change footer to column */
  @media (max-width: 850px) {
    .footer-container {
      flex-direction: column;
      align-items: center;
      text-align: center;
    }
    
    .logo-footer img {
      margin: auto;
    }

    div.logo-footer {
      width: 100%;
    }
  }

  body {
    background-color: #f6f6f6;
  }

